--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
     "@eslint/js": "^9.8.0",
+    "@nrwl/angular": "^19.8.4",
     "@nx/angular": "20.1.3",
     "@nx/devkit": "20.1.3",
     "@nx/eslint": "20.1.3",
@@ -52,7 +53,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
-    "nx": "20.1.3",
+    "nx": "^20.1.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
