Add menu and fix minor bugs

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@buygiftpresent/home": ["libs/pages/home/src/index.ts"],
+      "@buygiftpresent/menu": ["libs/features/menu/src/index.ts"],
       "@buygiftpresent/wishlist": ["libs/pages/wishlist/src/index.ts"]
     }
   },
