--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~18.2.0",
-    "@angular/common": "~18.2.0",
-    "@angular/compiler": "~18.2.0",
-    "@angular/core": "~18.2.0",
-    "@angular/forms": "~18.2.0",
-    "@angular/platform-browser": "~18.2.0",
-    "@angular/platform-browser-dynamic": "~18.2.0",
-    "@angular/router": "~18.2.0",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.14.3"
+    "@angular/animations": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
+    "rxjs": "~7.8.1",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.2.0",
-    "@angular-devkit/core": "~18.2.0",
-    "@angular-devkit/schematics": "~18.2.0",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "~18.2.0",
-    "@angular/language-service": "~18.2.0",
-    "@eslint/js": "^9.8.0",
+    "@angular-devkit/build-angular": "^18.0.0",
+    "@angular-devkit/core": "^18.0.0",
+    "@angular-devkit/schematics": "^18.0.0",
+    "@angular/cli": "^18.0.0",
+    "@angular/compiler-cli": "^18.0.0",
+    "@angular/language-service": "^18.0.0",
+    "@eslint/js": "^9.15.0",
     "@nrwl/angular": "^19.8.4",
     "@nx/angular": "20.1.3",
     "@nx/devkit": "20.1.3",
@@ -38,28 +38,28 @@
     "@nx/playwright": "20.1.3",
     "@nx/web": "20.1.3",
     "@nx/workspace": "20.1.3",
-    "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~18.2.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.0.0",
-    "angular-eslint": "^18.3.0",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-playwright": "^1.6.2",
+    "@playwright/test": "^1.49.0",
+    "@schematics/angular": "^18.0.0",
+    "@swc-node/register": "~1.10.9",
+    "@swc/core": "~1.9.3",
+    "@swc/helpers": "~0.5.15",
+    "@types/jest": "^29.5.14",
+    "@types/node": "22.9.3",
+    "@typescript-eslint/utils": "^8.15.0",
+    "angular-eslint": "^18.4.2",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-playwright": "^2.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.1.0",
+    "jest-preset-angular": "~14.3.3",
     "nx": "^20.1.3",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0"
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
+    "ts-node": "10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.15.0"
   },
   "nx": {
     "includedScripts": []
