--- a/project.json
+++ b/project.json
@@ -23,7 +23,13 @@
             "input": "public"
           }
         ],
-        "styles": ["./src/styles.scss"],
+        "styles": [
+          "node_modules/primeicons/primeicons.css",
+          "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+          "node_modules/primeng/resources/primeng.min.css",
+          "node_modules/primeflex/primeflex.css",
+          "./src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
