--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nx/devkit": "20.1.3",
     "@angular/animations": "^18.0.0",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
@@ -39,6 +40,7 @@
     "@nx/jest": "20.1.3",
     "@nx/js": "20.1.3",
     "@nx/playwright": "20.1.3",
+    "@nx/plugin": "^20.1.3",
     "@nx/web": "20.1.3",
     "@nx/workspace": "20.1.3",
     "@playwright/test": "^1.49.0",
@@ -66,5 +68,6 @@
   },
   "nx": {
     "includedScripts": []
-  }
+  },
+  "generators": "./generators.json"
 }
