--- a/project.json
+++ b/project.json
@@ -6,6 +6,11 @@
   "prefix": "app",
   "sourceRoot": "./src",
   "tags": [],
+  "generators": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  },
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
@@ -77,7 +82,7 @@
     "lint": {
       "executor": "@nx/eslint:lint",
       "options": {
-        "lintFilePatterns": ["./src"]
+        "lintFilePatterns": ["./src", "generators.json", "./package.json"]
       }
     },
     "test": {
