--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,9 @@
       "@buygiftpresent/api": ["libs/api/src/index.ts"],
       "@buygiftpresent/home": ["libs/pages/home/src/index.ts"],
       "@buygiftpresent/menu": ["libs/features/menu/src/index.ts"],
-      "@buygiftpresent/wishlist": ["libs/pages/wishlist/src/index.ts"]
+      "@buygiftpresent/smn-plugin": ["tools/smn-plugin/package.json"],
+      "@buygiftpresent/wishlist": ["libs/pages/wishlist/src/index.ts"],
+      "smn-plugin": ["tools/smn-plugin/package.json"]
     }
   },
   "exclude": ["node_modules", "tmp"]
