--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@buygiftpresent/home": ["libs/pages/home/src/index.ts"],
       "@buygiftpresent/menu": ["libs/features/menu/src/index.ts"],
       "@buygiftpresent/smn-plugin": ["tools/smn-plugin/package.json"],
+      "@buygiftpresent/wish-card": ["libs/shared/wish-card/src/index.ts"],
       "@buygiftpresent/wishlist": ["libs/pages/wishlist/src/index.ts"],
       "smn-plugin": ["tools/smn-plugin/package.json"]
     }
