Create separate navigation component

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,9 @@
       "@buygiftpresent/core": ["libs/core/src/index.ts"],
       "@buygiftpresent/home": ["libs/pages/home/src/index.ts"],
       "@buygiftpresent/menu": ["libs/features/menu/src/index.ts"],
+      "@buygiftpresent/navigation-menu": [
+        "libs/features/navigation-menu/src/index.ts"
+      ],
       "@buygiftpresent/smn-plugin": ["tools/smn-plugin/package.json"],
       "@buygiftpresent/wish-list": ["libs/features/wish-list/src/index.ts"],
       "@buygiftpresent/wishlist": ["libs/pages/wishlist/src/index.ts"],
