--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
     "@eslint/js": "^9.15.0",
+    "@happy-dom/jest-environment": "^15.11.6",
     "@nrwl/angular": "^19.8.4",
     "@nx/angular": "20.1.3",
     "@nx/devkit": "20.1.3",
@@ -55,6 +56,7 @@
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-playwright": "^2.1.0",
+    "happy-dom": "^15.11.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.3.3",
