--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-eslint/eslint-plugin": "^18.4.2",
+    "@angular-eslint/eslint-plugin-template": "^18.4.2",
     "@angular/animations": "^18.0.1",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
@@ -18,6 +20,11 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@nx/devkit": "20.1.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.9.0",
+    "eslint-plugin-jsdoc": "^50.5.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-rxjs-angular-updated": "^1.0.19",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.12",
@@ -41,7 +48,7 @@
     "@nx/jest": "20.1.3",
     "@nx/js": "20.1.3",
     "@nx/playwright": "20.1.3",
-    "@nx/plugin": "^20.1.3",
+    "@nx/plugin": "20.1.3",
     "@nx/web": "20.1.3",
     "@nx/workspace": "20.1.3",
     "@playwright/test": "^1.49.0",
@@ -60,7 +67,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.3.3",
-    "nx": "^20.1.3",
+    "nx": "20.1.3",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
